overflow fix: showing vertical scroll for clipping svg

--- a/src/ui/screens/home/home.module.css
+++ b/src/ui/screens/home/home.module.css
@@ -211,7 +211,7 @@ span.details_num {
 .donation .svg{
     width: 100vw;
     width: 100vw;
-    overflow-x: hidden;
+    overflow: hidden;
     position: absolute;
 }
 
